prometheus.svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: prometheus
  namespace: monitoring
  labels: 
    kubernetes.io/name: "Prometheus"
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec: 
  type: ClusterIP
  ports: 
    - name: http 
      port: 9090
      protocol: TCP
      targetPort: 9090
     # nodePort: 30090
  selector: 
    k8s-app: prometheus
