prometheus.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:047461095839:certificate/f113c072-7106-4dbc-a95e-0204ef764b3e
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/subnets: subnet-05008fbb31930c7c0, subnet-071e07e83dd5146f5
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/whitelist-source-range: '61.169.138.144/29'
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: alb
  rules:
  - host: prometheus.futudinero.com
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-monitori-promethe-709499c669-826868993.us-west-1.elb.amazonaws.com
